# JuicyEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  FormatAllSources.bat  JuicyEngine.sln  JuicyEngine.vcxproj  README.md  conanfile.txt  premake5.lua  prepare_conan.bat
JuicyEngine/: CMakeLists.txt  JuicyEngine.vcxproj  JuicyEngine.vcxproj.filters  premake5.lua
JuicyEngine/JuicyEngine/: JuicyEngine.vcxproj  JuicyEngine.vcxproj.filters  Test.cpp  Test.h
JuicyEngine/JuicyEngine/src/: JuicyEngine.h
JuicyEngine/JuicyEngine/src/JuicyEngine/: Application.h  Core.h  EntryPoint.h
JuicyEngine/Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
JuicyEngine/Sandbox/src/: Applicatio.cpp
JuicyEngine/Source/: Application.cpp  Application.h  EntryPoint.h  JuicyEngine.h  jepch.h
JuicyEngine/Source/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
JuicyEngine/Source/Editor/: EditorLayer.cpp  EditorLayer.h
JuicyEngine/Source/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
JuicyEngine/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
JuicyEngine/Source/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture2D.cpp  VulkanTexture2D.h  VulkanUtils.cpp  VulkanUtils.h
JuicyEngine/Source/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
JuicyEngine/Source/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.h  Pipeline.h
JuicyEngine/src/: JuicyEngine.h  jepch.cpp  jepch.h
JuicyEngine/src/JuicyEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
JuicyEngine/src/JuicyEngine/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  Window.cpp  Window.h
JuicyEngine/src/JuicyEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
JuicyEngine/src/JuicyEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
JuicyEngine/src/JuicyEngine/Math/: Math.cpp  Math.h
JuicyEngine/src/JuicyEngine/Platform/RHI/Platform/: VulkanPlatform.h  VulkanPlatformWindows.cpp
JuicyEngine/src/JuicyEngine/Platform/RHI/VulkanRHI/: VulkanContext.cpp  VulkanContext.h
JuicyEngine/src/JuicyEngine/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h
JuicyEngine/src/JuicyEngine/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
JuicyEngine/src/JuicyEngine/RHI/VulkanRHI/: VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h
JuicyEngine/src/JuicyEngine/RHI/VulkanRHI/Platform/: VulkanPlatform.h  (+1 more)
JuicyEngine/src/JuicyEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
JuicyEngine/src/JuicyEngine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
JuicyEngine/src/JuicyEngine/Utils/: PlatformUtils.h
JuicyEngine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
JuicyEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini  premake5.lua
Sandbox/Assets/Shaders/: compile.bat  shader.frag  shader.vert
Sandbox/Source/: EntryPoint.cpp  main.cpp
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl  shader.vert  vert.spv
Sandbox/src/: Applicatio.cpp  ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
engine/: CMakeLists.txt
engine/src/: CoreDefines.h  Engine.cpp  Engine.h  Entry.h  GameTypes.h  defines.h  main.cpp  test.cpp  test.h
engine/src/Core/: Application.cpp  Application.h
engine/src/Platform/: Platform.h
engine/src/Platform/Common/: BaseWindow.h  WindowEvent.h
engine/src/Platform/Windows/: PlatformWindows.cpp  PlatformWindows.h  WindowsPlatform.h  WindowsWindow.cpp  WindowsWindow.h
engine/src/Renderer/: VulkanTypes.h
engine/src/core/: log.cpp  log.h
engine/src/platform/: platform.h
engine/src/platform/Windows/: PlatformWindows.cpp  PlatformWindows.h
engine/testbed/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  testbed.sln  testbed.vcxproj  testbed.vcxproj.filters
shaders/: colors.fs  (+3 more)
testbed/: CMakeLists.txt
testbed/Resources/: testbed.rc
testbed/src/: Entry.cpp  Game.cpp  Game.h  main.cpp
(+28 files in other folders)
